0.2.0 - 2019-06-07

  - Remove `BasePlugin` dependency (not needed anymore)


0.1.1 - 2019-03-11

  - Add `name` to the plugin handler to make Kong logs more readable


0.1.0 - 2019-02-13

  - Initial release