@@ -1,3 +1,10 @@
+UNRELEASED
+
+  - Add `namespace_blacklist` to plugin schema with `kube-system`
+    blacklisted by default
+    (see: https://github.com/Kong/kubernetes-sidecar-injector/issues/4)
+
+
 0.2.0 - 2019-06-07
 
   - Remove `BasePlugin` dependency (not needed anymore)
